--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "dependencies": {
-    "child_process": "^1.0.2",
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "ffmpeg-static": "^5.2.0",
-    "fluent-ffmpeg": "^2.1.3",
-    "yt-dlp-wrap": "^2.3.12",
-    "ytdl-core": "^4.11.5"
-  },
   "name": "yt-downloader",
   "version": "1.0.0",
   "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "keywords": [],
+  "description": "",
   "author": "",
   "license": "ISC",
-  "description": ""
+  "keywords": [],
+  "scripts": {
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "express": "^4.21.2",
+    "cors": "^2.8.5",
+    "child_process": "^1.0.2",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
+    "yt-dlp-wrap": "^2.3.12",
+    "ytdl-core": "^4.11.5",
+    "yt-dlp-exec": "^1.2.0"
+  }
 }
