--- a/package.json
+++ b/package.json
@@ -2,13 +2,8 @@
   "name": "yt-downloader",
   "version": "1.0.0",
   "main": "server.js",
-  "description": "",
-  "author": "",
-  "license": "ISC",
-  "keywords": [],
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.21.2",
@@ -17,7 +12,10 @@
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "yt-dlp-wrap": "^2.3.12",
-    "ytdl-core": "^4.11.5",
-    "yt-dlp-exec": "^1.2.0"
-  }
+    "ytdl-core": "^4.11.5"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
