--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.21.2",
-    "cors": "^2.8.5",
     "child_process": "^1.0.2",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
+    "yt-dlp-exec": "^1.0.2",
     "yt-dlp-wrap": "^2.3.12",
     "ytdl-core": "^4.11.5"
   },
